tests/sumo/extended/simulation_routing/personTrip/errors/testsuite.sumo
# reject access  outside busStop
access_invalid

# reject multiple access definitions for the same edge
access_double_invalid

# two rides without pt but with route output
unreachable_rides

# public transport via bustops
flow_without_end
